@@ -3,4 +3,4 @@
 
 <possible notes regarding this package - if none, delete this file>
 
- -- #USERNAME# <#EMAIL#>, #DATE#
+ -- #USERNAME# <#EMAIL#>  #DATE#
