@@ -10,7 +10,6 @@ set -e
 #        * <new-preinst> `install' <old-version>
 #        * <new-preinst> `upgrade' <old-version>
 #        * <old-preinst> `abort-upgrade' <new-version>
-#
 # for details, see http://www.debian.org/doc/debian-policy/ or
 # the debian-policy package
 
