@@ -2,7 +2,7 @@ Source: #PACKAGE#
 Section: unknown
 Priority: extra
 Maintainer: #USERNAME# <#EMAIL#>
-Build-Depends: #BUILD_DEPS#
+Build-Depends: cdbs, #BUILD_DEPS#
 Standards-Version: #POLICY#
 
 Package: #PACKAGE#
