@@ -3,4 +3,4 @@ The Debian Package #PACKAGE#
 
 Comments regarding the Package
 
-#USERNAME# <#EMAIL#>, #DATE#
+ -- #USERNAME# <#EMAIL#>  #DATE#
